--- a/www/style.css
+++ b/www/style.css
@@ -3,14 +3,14 @@
 margin:5px;
 padding:5px;
 width:40px;
-height:40px;
+height:40px;b
 border:solid 1px #f00;
 font:bold 3em verdana,arial,sans-serif;
 }
 .back {background:#ffd;cursor:pointer;}
-.cf1  {background:#ff0;color:#ffff00;}
-.cf2  {background:#f9f;color:#ffff00;}
-.cf3  {background:#0cf;color:#cc0000;}
+.cf1  {background:#ff0;color:#00000;}
+.cf2  {background:#f9f;color:#00000;}
+.cf3  {background:#0cf;color:#00000;}
 .ui-btn {width: 9em; margin:auto !important;}
 .count {
 margin:auto;
